<resources>
    <string name="app_name">Tetris</string>
    <string name="Tetris">Tetris</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Speed">Speed</string>
    <string name="Score">Score</string>
    <string name="Level">Level</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Pause_game">Pause game</string>
    <string name="Play">Play</string>
    <string name="New_game">New game</string>
    <string name="Records">Records</string>
    <string name="Exit">Exit</string>
    <string name="Resume">Resume</string>
    <string name="Help">Help</string>
    <string name="Next">Next</string>
    <string name="Table_of_records">Table of records</string>
    <string name="Number" translatable="false">№</string>
    <string name="Nick">Nick</string>
    <string name="Text_Help_fragment">During the game, the program displays a rectangular playing field - "glass",
        which fall one after the other bones.Bones are composed of 4 cells. Player during the fall of bone can move it to the left or right
        (you need to hold the left or right across the screen), rotate it relative to the center (you need to click once on the screen)
        and "drop" it, instead of waiting until it reaches the bottom (hold down the screen).
        The rate of fall of the bone depends on the number of points (increases after every hundred).
        Points are awarded to the player for a fully completed horizontal rows (15 points for a row).
        The fall of the bone stops when directly under any of its cells is cell before falling dice or the bottom of the "cup".
        Upon termination of falling a situation is analysed on the playing field.
        All appearing filled rows retire, glasses are here charged extra.
        Upon termination of analysis of playing situation casual character a type and color of next
        bone that appears in the middle of overhead part " of glass" and begins to fall are determined.
        A game closes, if after falling of bone some her cage appears in the overhead row of the playing field.
        If the result of player appears one of the 10 best, the program inquires his name and saves a
        record about him in the table of records. Records in a table are well-organized on the decrease
        of amount of the collected glasses. Upon termination of game an user can begin new or to go out
        from the program. During a game an user can bowl off, pushing the button of exit, it is here possible
        to save current status of the playing field, next time to begin to play the stored state.
        It is possible to begin a game again, pushing the corresponding button
    </string>
    <string name="Enter">Enter</string>
    <string name="Enter_nick">Enter NickName:</string>
    <string name="PLAYER">PLAYER</string>
    <string name="Game_over">Game\nover!</string>
    <string name="Save_game">Save game</string>
    <string name="Load_game">Load game</string>
    <string name="Continue">Continue</string>
    <string name="Continue_question">Continue?</string>
    <string name="Continue_previous_game">Do you wish to continue your previous game?</string>
    <string name="Selecting_new_game">Selecting \"NEW\" will erase your saved game.</string>
    <string name="result_top_ten">Congratulations! \n\n Your result in the top 10!</string>
    <string name="upgrade_result_top_ten">Congratulations! \n\n You updated the result \n in the top 10!</string>
    <string name="classic">Classic\nGame</string>
    <string name="open_image">Open\nImage</string>
    <string name="Main_menu">Main menu</string>
    <string name="Thing">Thing</string>
    <string name="You_win">YOU WIN!</string>
    <string name="Level_up">Level -</string>
    <string name="Levels">Levels</string>
</resources>
