<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <TextView style="@style/BlockTableOfRecords"
        android:text="@string/Number"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_margin="0.5dp"
        android:minHeight="25dp"/>
    <TextView style="@style/BlockTableOfRecords"
        android:text="@string/Nick"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_margin="0.5dp"
        android:minHeight="25dp" />
    <TextView style="@style/BlockTableOfRecords"
        android:text="@string/Score"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_margin="0.5dp"
        android:minHeight="25dp" />




</TableRow>