<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Continue_question"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Continue_previous_game"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:textSize="16sp" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Selecting_new_game"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginBottom="20dp"
        android:singleLine="false"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:background="@android:color/holo_green_light"
        android:id="@+id/continueOnContinueSavedGameButton"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/New_game"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/newGameOnContinueSavedGameButton"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:layout_gravity="right"
        android:layout_marginLeft="24dp" />

</LinearLayout>