<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resume"
        android:id="@+id/game_pause_button_resume"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_light"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:alpha="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/New_game"
        android:id="@+id/game_pause_button_new_game"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:alpha="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Records"
        android:id="@+id/game_pause_button_records"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_purple"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:alpha="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Help"
        android:id="@+id/game_pause_button_help"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:alpha="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Main_menu"
        android:id="@+id/game_pause_button_main_menu"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_red_light"
        android:textSize="20sp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:alpha="0" />
</LinearLayout>