<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:layout_gravity="top|center"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:textSize="19sp"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_back_ImageButton"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:background="@android:drawable/ic_menu_revert" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_classic_mode_Button"
            android:text="@string/classic"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_open_image_mode_Button"
            android:text="@string/open_image"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/help_fragment_container">



  <!--      <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Help_fragment"
                android:layout_gravity="top"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="start"
                android:textSize="17sp" />

            </ScrollView> -->

    </FrameLayout>
</LinearLayout>